# koopman-op

./: .gitignore  CMakeLists.txt  README.md  al-quad.cpp  cp-plot.py  errsac_cartpend.cpp  errsac_koopman_cp.cpp  errsac_koopquad.cpp  linear-plot.py  linear.cpp  pend-plot.py  pend.cpp  quad-plot.py  twolink-plot.py  twolink.cpp  twolinkplotter.py  twomass-plot.py  twomass.cpp
src/: .~lock.calibration_evalu.csv#  ActLearnK.hpp  LQR.hpp  LQR_traj.hpp  SAC.hpp  basis-template.hpp  cost-template.hpp  cpbasis.hpp  dkl_cost.hpp  ergodic_cost.hpp  error_cost_IK.hpp  error_costfl.hpp  euler2r.hpp  f8traj_IK.hpp  fisher_cost.hpp  iiwabasis1.hpp  iiwabasis2.hpp  iiwabasis3.hpp  koopsys.hpp  linear.hpp  linearbasis.hpp  lineartl.hpp  pend.hpp  pendbasis.hpp  quadbasis.hpp  quadrotor.hpp  rk4_int.hpp  system-template.hpp  twolink.hpp  twolinkbase.hpp  twolinkbasis.hpp  twolinktraj.hpp  twomass.hpp  twomassbasis.hpp  xustruct.hpp
